# RAG-exeperiment

./: .gitignore  README.md  notatka.txt  pyproject.toml
notebooks/: GPT4ALLtest.ipynb  arxiv.ipynb  arxiv_explorations.ipynb  olekkazecki_build_simple_rag.ipynb  olekkazecki_docs_list.txt  process_text.ipynb
notebooks/papers/: draft.tex
rag_experiment/: RAG_book.ipynb  book_1.txt  book_2.txt  extract.py  index.py  papers_ids.txt  prepare.py  rag.ipynb  test_db.ipynb  test_db.py
tasks/: buils_simple_rag.md  task1.md
