[tool.poetry]
name = "rag-experiment"
version = "0.1.0"
description = ""
authors = ["Maria Knorps <maria.knorps@tweag.io>", "Aleksander Kazecki <olekkazecki@mat.umk.pl>","Marcin Zadrożny <mzadrozny@mat.umk.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
langchain = "^0.1.9"
gpt4all = "^2.2.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
